# xfyun-words-classification

./: .env  .gitignore  README.md  main.py  pyproject.toml
data/: example.csv
data/dataset/: test_text.csv  train_all.csv
data/result/: test_pred.20250704_125741.csv  test_pred_embedding_svc.60_61.20250701_155628.csv  test_pred_logistic.53_96.20250701_135522.csv  test_pred_rf.49_56.20250701_135657.csv  test_pred_svc.58_46.20250701_135455.csv  test_pred_voting.56_79.20250701_135814.csv
src/: utils.py
src/dl/: bert_base.py  pt_model_base.py
src/llm/: llm.py
src/tfidf/: __init__.py  ensemble.py  logistic.py  rf.py  svc.py
