[project]
name = "classify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.8.1",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "datasets>=2.14.4",
    "dotenv>=0.9.9",
    "filelock==3.18.0",
    "fsspec==2025.5.1",
    "hf-xet>=1.1.5",
    "huggingface-hub==0.33.1",
    "idna==3.10",
    "jieba==0.42.1",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "loguru==0.7.3",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.5",
    "ninja>=1.11.1.4",
    "numpy==2.3.1",
    "openai>=1.93.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "pillow==11.2.1",
    "psutil==7.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "sentence-transformers==4.1.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy>=1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.2",
    "torch>=2.7.1",
    "tqdm==4.67.1",
    "transformers>=4.53.0",
    "triton>=3.3.1; sys_platform != 'win32'",
    "triton-windows>=3.3.1.post19; sys_platform == 'win32'",
    "typing-extensions==4.14.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wandb>=0.20.1",
    "win32-setctime==1.2.0",
]
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
